[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/abstract/loudnoise.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 84.6536

[sub_resource type="CircleShape2D" id=2]
radius = 143.593

[node name="MediumNoise" type="Area2D"]
collision_layer = 0
collision_mask = 260
monitorable = false
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.937255, 0.992157, 0, 0.309804 )
shape = SubResource( 1 )

[node name="SmallNoise" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 260
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SmallNoise"]
modulate = Color( 0.937255, 0.992157, 0, 0.309804 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_MediumNoise_body_entered"]
[connection signal="body_entered" from="SmallNoise" to="." method="_on_SmallNoise_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
